edit link in fetch calls

--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgresql://neondb_owner:KdCzvwB5cuL3@ep-still-wildflower-a5htdzvg.us-east-2.aws.neon.tech/neondb?sslmode=require"
+NEXT_PUBLIC_API_BASE_URL="https://security-app-blue.vercel.app"
